--- a/style.css
+++ b/style.css
@@ -5,15 +5,12 @@ html,body,h1 {
 
 .dec {background-color: rgba(255, 255, 255, 0.7);
 	border:  2px solid gold;
-	height:200px;
+	height:fit-content;
 	width: 500px;
-	margin: auto;
-	align-self: center;
 	text-align: center;
-	border-spacing: 0px;
-	position: relative;
-	bottom: 500px
-	}
+	margin-left: 25%;
+	padding: 10px;
+}
 
 div#op {
 	border-radius: 10px;
@@ -32,7 +29,7 @@ footer#bye {
 	color:  black;
 	background-color: lightsalmon;
 	margin-bottom: 0;
-	position: sticky;
+	position: fixed;
 	width: 100%
 }
 
@@ -41,14 +38,15 @@ div#hi {
 }
 
 ul#one {
-	border: 3px solid green;
+	border: 2px solid white;
 	text-decoration: none;
-	background-color: rgba(30, 105, 30, 0.767);
+	background-color: rgba(255, 255, 255, 0.9);
 	height: 100%;
 	margin: 0;
+	margin-top: 3%;
 	padding: 0;
 	width: 300px;
-	overflow: auto;
+	position: fixed;
 }
 li:hover {
 	background-color: rgba(255, 255, 255, 0.712);
@@ -64,6 +62,8 @@ li#eone a:active {
 
 
 li#one a {
+	background-color: #aaeca7;
+	border: 1px solid black;
 	text-decoration: none;
 	padding: 8px 16px;
 	display: block;
@@ -77,18 +77,18 @@ li#one a {
 li#h_nav1 {
 	text-align: center;
 	float: left;
-	padding: 50px 50px 50px 50px;
+	padding: 50px 50px 0px 50px;
 	margin: 0;
 	padding-top: 10;
 	display: block;
 	text-align: center;
-	position: sticky;
+	position: static;
 }
 
 ul#h_nav {
+	position: fixed;
 	width: 100%;
 	float: left;
-	overflow: hidden;
 	background-color: yellow;
 	height: 30px;
 	list-style-type: none;
@@ -96,6 +96,12 @@ ul#h_nav {
 	padding: 0;
 	margin: 0;
 	box-shadow: 0px 5px 24px black;
-	position: relative;
-	bottom: 0px;
+}
+
+li#one a:hover {
+	background-color: #498746;
+}
+
+#rick:hover {
+	text-shadow: 0 0 20px white;
 }
