--- a/style.css
+++ b/style.css
@@ -1,15 +1,18 @@
 html,body,h1 {
 	margin: 0;
 	padding: 0;
+	background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .dec {background-color: rgba(255, 255, 255, 0.7);
 	border:  2px solid gold;
 	height:fit-content;
-	width: 500px;
 	text-align: center;
-	margin-left: 25%;
 	padding: 10px;
+	overflow: hidden;
 }
 
 div#op {
@@ -39,15 +42,11 @@ div#hi {
 
 ul#one {
 	border-radius: 7px;
-	border: 2px solid white;
+	border: 2px solid rgba(255, 255, 255, 0.9);
 	text-decoration: none;
 	background-color: rgba(255, 255, 255, 0.9);
-	height: 100%;
 	margin: 0;
-	margin-top: 3%;
 	padding: 0;
-	width: 300px;
-	position: fixed;
 }
 li:hover {
 	background-color: rgba(255, 255, 255, 0.712);
@@ -64,14 +63,23 @@ li#eone a:active {
 
 li#one a {
 	border-radius: 7px;
-	background-color: #aaeca7;
-	border: 1px solid black;
+	background-color: #24c81d94;
+	border: 1px solid rgba(255, 255, 255, 0.9);
 	text-decoration: none;
 	padding: 8px 16px;
 	display: block;
 	color: rgb(255, 255, 255);
 }
-
+li#one a:hover {
+	border-radius: 7px;
+	background-color: #24c81d94;
+	border: 2px solid rgba(0, 0, 0);
+	text-decoration: none;
+	padding: 8px 16px;
+	display: block;
+	color: rgb(255, 255, 255);
+	box-shadow: 0px 7px 24px black;
+}
 
 
 
@@ -79,24 +87,20 @@ li#one a {
 li#h_nav1 {
 	text-align: center;
 	float: left;
-	padding: 50px 50px 0px 50px;
+	padding: 10px 50px 10px 50px;
 	margin: 0;
-	padding-top: 10;
 	display: block;
 	text-align: center;
-	position: static;
 }
 
 ul#h_nav {
-	position: fixed;
 	width: 100%;
 	float: left;
 	background-color: yellow;
-	height: 30px;
 	list-style-type: none;
 	border: 2px solid black;
 	padding: 0;
-	margin: 0;
+	margin: 0 0 30px 0;
 	box-shadow: 0px 5px 24px black;
 }
 
